--- a/contact_form/src/app/pages/home-page/home-page.component.html
+++ b/contact_form/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <main>
-  <div>
-    <img src="../../../assets/Rectangle 2 (1).svg" alt="">
+  <div class="container">
+    <img src="../../../assets/Rectangle 2.png" alt="">
     <app-form></app-form>
   </div>
 </main>
