--- a/contact_form/src/styles.css
+++ b/contact_form/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/styles/reset.css";
+@import "./app/styles/global.css";
+@import "./app/styles/typography.css";
